<resources>
    <string name="app_name">GMERGAMES</string>
    <string name="welcome">Bienvenido a GMERGAMES, introduce tu nombre</string>
    <string name="userHint">user</string>
    <string name="enter">ENTER</string>
    <string name="infoVersion">User %s, you are using version 1 of GMERGAMES. This app is a little library of videogames in which you could like and share opinions about them</string>
    <string name="Iniciar">Start</string>
    <string name="errorSnackbar">You must introduce a name</string>
    <string name="activity_paused">The Main Activity has been paused</string>
    <string name="activity_restarted">The Main Activity has been restarted</string>
    <string name="activity_started">The Main Activity has been started</string>
    <string name="activity_resumed">The Main Activity has been resumed</string>
    <string name="activity_stopped">The Main Activity has been stopped</string>
    <string name="activity_destroyed">The Main Activity has been destroyed</string>
    <string name="email_destiny">gmergut660@g.educaand.es</string>
    <string name="email_subject">Consult info of GMERGAMES</string>
    <string name="email_body">Type your consult here</string>
    <string name="no_email_apps">It does not exist an app installed capable of sending email</string>
    <string name="btnExit">Salir</string>
    <string name="notice">Info of the APP</string>
    <string name="first_tab">Welcome to GmerGames! Your pocket library of your favorite videogames</string>
    <string name="second_tab">You can add your favorite games to your own list and rate them!</string>
    <string name="comenzar">Begin</string>
    <string name="item_list_head">List of videogames:</string>
    <string name="item_image">Item image</string>
    <string name="genre">Genre</string>
    <string name="Summary">Summary</string>
    <string name="genreExample">Action</string>
    <string name="descriptionText">Short description</string>
    <string name="add_to_favs">Add to favorites</string>
    <string name="detailed_user_info">User detailed info</string>
    <string name="fav_games_head">Favorite games list</string>
    <string name="delete_from_favs">Remove from favorites</string>
    <string name="detail_fav_item_list">Detailed favorite list</string>
    <string name="go_back">Back</string>
    <string name="go_to_favs">View favorites</string>
    <string name="go_to_item_detail">View details</string>
    <string name="view_user">View user</string>
    <string name="btn_begin">BEGIN</string>
    <string name="discover">Discover</string>
    <string name="go_to_favs_bottom_bar">Go to favs</string>
    <string name="personal_user_info">User info</string>
    <string name="menu">Menu</string>
    <string name="delete">Delete</string>
    <string name="support_confirm_delete">¿Do you want to delete the game: %s?</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Confirm</string>
    <string name="item_list">List of videogames</string>
    <string name="support_confirm_delete_from_fav">Are you sure to del %s from favs?</string>
    <string name="game_added_to_favs">Game successfully added to favs!</string>
    <string name="game_deleted_from_fav">Game successfully removed from favs!</string>
    <string name="game_not_aded_to_favs">An error occurred!</string>
    <string name="game_not_deleted_from_favs">An error occurred!</string>
    <string name="place_holder_name">Introduce name</string>
    <string name="default_showCheckBox">Show viewPager at launch</string>
    <string name="save_user_prefs">Save Prefs</string>
    <string name="word_is_empty">Please, introduce a name</string>
    <string name="description">Short description</string>
    <string name="contact">Contact</string>
</resources>