<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_fragment_detail_fav_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.detailFavItem.DetailFavItemFragment">

    <ProgressBar
        android:id="@+id/pbLoadingDetailFavItem"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDetailFavItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Contenido de la CardView -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:contentDescription="@string/item_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/capitan_america" />

            <TextView
                android:id="@+id/tvName"
                style="@style/title_item_text"
                app:layout_constraintEnd_toStartOf="@+id/ivDelItem"
                app:layout_constraintStart_toEndOf="@+id/ivPhoto"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Videojuego X" />

            <TextView
                android:id="@+id/textGenre"
                style="@style/important_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                app:layout_constraintEnd_toStartOf="@+id/textSummary"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/ivPhoto"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/textSummary"
                style="@style/important_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/Summary"
                app:layout_constraintEnd_toStartOf="@+id/ivDelItem"
                app:layout_constraintStart_toEndOf="@+id/textGenre"
                app:layout_constraintTop_toTopOf="@+id/textGenre" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvSummary"
                app:layout_constraintEnd_toEndOf="@+id/textGenre"
                app:layout_constraintStart_toStartOf="@+id/textGenre"
                tools:text="@string/genreExample" />

            <TextView
                android:id="@+id/tvSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/textSummary"
                app:layout_constraintStart_toStartOf="@+id/textSummary"
                app:layout_constraintTop_toBottomOf="@+id/textSummary"
                tools:text="@string/descriptionText" />


            <ImageView
                android:id="@+id/ivDelItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                app:layout_constraintBottom_toBottomOf="@+id/ivPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivPhoto"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <RatingBar
                android:id="@+id/rbRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:isIndicator="true"
                android:progressTint="#4CAF50"
                android:rating="3"
                android:stepSize="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivDelItem"
                app:layout_constraintStart_toEndOf="@id/ivPhoto"
                app:layout_constraintTop_toBottomOf="@id/tvGenre" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnPaTras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>